--- a/docs/utils/rolling-window-backtest.ipynb
+++ b/docs/utils/rolling-window-backtest.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0d0b172f",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "539e7a5a",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "be30ce84",
    "metadata": {},
    "outputs": [
@@ -97,62 +97,62 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2025-01-01</td>\n",
-       "      <td>TICK004 AAA</td>\n",
+       "      <td>TICK046 AAA</td>\n",
        "      <td>AAA</td>\n",
-       "      <td>1.251888</td>\n",
-       "      <td>-0.365574</td>\n",
-       "      <td>0.449846</td>\n",
-       "      <td>1.084808</td>\n",
-       "      <td>2031-07-26</td>\n",
-       "      <td>5.429837</td>\n",
+       "      <td>1.037280</td>\n",
+       "      <td>0.750856</td>\n",
+       "      <td>-1.445716</td>\n",
+       "      <td>-0.434421</td>\n",
+       "      <td>2030-09-20</td>\n",
+       "      <td>7.699485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2025-01-01</td>\n",
-       "      <td>TICK038 AAA</td>\n",
+       "      <td>TICK022 AAA</td>\n",
        "      <td>AAA</td>\n",
-       "      <td>-0.020429</td>\n",
-       "      <td>1.186029</td>\n",
-       "      <td>0.074927</td>\n",
-       "      <td>-0.060175</td>\n",
-       "      <td>2033-11-25</td>\n",
-       "      <td>6.562629</td>\n",
+       "      <td>-1.349441</td>\n",
+       "      <td>-0.449716</td>\n",
+       "      <td>-0.543036</td>\n",
+       "      <td>0.858139</td>\n",
+       "      <td>2029-01-08</td>\n",
+       "      <td>2.125824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2025-01-01</td>\n",
-       "      <td>TICK037 AAA</td>\n",
+       "      <td>TICK035 AAA</td>\n",
        "      <td>AAA</td>\n",
-       "      <td>0.784997</td>\n",
-       "      <td>-0.558714</td>\n",
-       "      <td>1.355466</td>\n",
-       "      <td>-1.959671</td>\n",
-       "      <td>2034-02-22</td>\n",
-       "      <td>4.991440</td>\n",
+       "      <td>1.477746</td>\n",
+       "      <td>-0.121104</td>\n",
+       "      <td>-2.318184</td>\n",
+       "      <td>-0.211448</td>\n",
+       "      <td>2025-07-16</td>\n",
+       "      <td>5.899495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2025-01-01</td>\n",
-       "      <td>TICK023 AAA</td>\n",
+       "      <td>TICK049 AAA</td>\n",
        "      <td>AAA</td>\n",
-       "      <td>-2.352641</td>\n",
-       "      <td>0.483961</td>\n",
-       "      <td>0.424343</td>\n",
-       "      <td>0.444225</td>\n",
-       "      <td>2026-12-01</td>\n",
-       "      <td>3.102583</td>\n",
+       "      <td>1.271709</td>\n",
+       "      <td>-1.039925</td>\n",
+       "      <td>-0.298122</td>\n",
+       "      <td>-1.388109</td>\n",
+       "      <td>2034-05-13</td>\n",
+       "      <td>3.868152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2025-01-01</td>\n",
-       "      <td>TICK034 AAA</td>\n",
+       "      <td>TICK047 AAA</td>\n",
        "      <td>AAA</td>\n",
-       "      <td>-0.928687</td>\n",
-       "      <td>-1.469315</td>\n",
-       "      <td>1.637445</td>\n",
-       "      <td>0.136618</td>\n",
-       "      <td>2029-06-07</td>\n",
-       "      <td>1.136793</td>\n",
+       "      <td>1.324646</td>\n",
+       "      <td>0.622864</td>\n",
+       "      <td>-0.196974</td>\n",
+       "      <td>-0.319635</td>\n",
+       "      <td>2029-11-23</td>\n",
+       "      <td>6.484171</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -160,21 +160,21 @@
       ],
       "text/plain": [
        "        date       ticker rating  feature_A  feature_B  feature_C  feature_D  \\\n",
-       "0 2025-01-01  TICK004 AAA    AAA   1.251888  -0.365574   0.449846   1.084808   \n",
-       "1 2025-01-01  TICK038 AAA    AAA  -0.020429   1.186029   0.074927  -0.060175   \n",
-       "2 2025-01-01  TICK037 AAA    AAA   0.784997  -0.558714   1.355466  -1.959671   \n",
-       "3 2025-01-01  TICK023 AAA    AAA  -2.352641   0.483961   0.424343   0.444225   \n",
-       "4 2025-01-01  TICK034 AAA    AAA  -0.928687  -1.469315   1.637445   0.136618   \n",
+       "0 2025-01-01  TICK046 AAA    AAA   1.037280   0.750856  -1.445716  -0.434421   \n",
+       "1 2025-01-01  TICK022 AAA    AAA  -1.349441  -0.449716  -0.543036   0.858139   \n",
+       "2 2025-01-01  TICK035 AAA    AAA   1.477746  -0.121104  -2.318184  -0.211448   \n",
+       "3 2025-01-01  TICK049 AAA    AAA   1.271709  -1.039925  -0.298122  -1.388109   \n",
+       "4 2025-01-01  TICK047 AAA    AAA   1.324646   0.622864  -0.196974  -0.319635   \n",
        "\n",
        "      expiry     yield  \n",
-       "0 2031-07-26  5.429837  \n",
-       "1 2033-11-25  6.562629  \n",
-       "2 2034-02-22  4.991440  \n",
-       "3 2026-12-01  3.102583  \n",
-       "4 2029-06-07  1.136793  "
+       "0 2030-09-20  7.699485  \n",
+       "1 2029-01-08  2.125824  \n",
+       "2 2025-07-16  5.899495  \n",
+       "3 2034-05-13  3.868152  \n",
+       "4 2029-11-23  6.484171  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "307de582",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d53121d6",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "b28c14b6",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "7916e891",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "7ce2e749",
    "metadata": {},
    "outputs": [
@@ -292,77 +292,77 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2025-01-31</td>\n",
-       "      <td>TICK008 BBB</td>\n",
+       "      <td>TICK024 BBB</td>\n",
        "      <td>BBB</td>\n",
-       "      <td>-0.512888</td>\n",
-       "      <td>-0.311519</td>\n",
-       "      <td>-0.025630</td>\n",
-       "      <td>1.382923</td>\n",
-       "      <td>2025-05-29</td>\n",
-       "      <td>3.804156</td>\n",
-       "      <td>5.053221</td>\n",
+       "      <td>0.083753</td>\n",
+       "      <td>0.511852</td>\n",
+       "      <td>0.470484</td>\n",
+       "      <td>-0.407524</td>\n",
+       "      <td>2026-05-10</td>\n",
+       "      <td>6.078283</td>\n",
+       "      <td>5.138238</td>\n",
        "      <td>2025-01-30</td>\n",
-       "      <td>-1.249065</td>\n",
+       "      <td>0.940045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2025-01-31</td>\n",
-       "      <td>TICK043 BBB</td>\n",
+       "      <td>TICK048 BBB</td>\n",
        "      <td>BBB</td>\n",
-       "      <td>0.293230</td>\n",
-       "      <td>0.751977</td>\n",
-       "      <td>-0.299135</td>\n",
-       "      <td>0.071018</td>\n",
-       "      <td>2028-07-16</td>\n",
-       "      <td>5.616794</td>\n",
-       "      <td>5.053221</td>\n",
+       "      <td>-1.020937</td>\n",
+       "      <td>0.012302</td>\n",
+       "      <td>-0.551115</td>\n",
+       "      <td>-1.993220</td>\n",
+       "      <td>2032-10-26</td>\n",
+       "      <td>4.210123</td>\n",
+       "      <td>5.138238</td>\n",
        "      <td>2025-01-30</td>\n",
-       "      <td>0.563573</td>\n",
+       "      <td>-0.928116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2025-01-31</td>\n",
-       "      <td>TICK017 BBB</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>0.063136</td>\n",
-       "      <td>0.369896</td>\n",
-       "      <td>-0.926765</td>\n",
-       "      <td>0.041201</td>\n",
-       "      <td>2029-02-11</td>\n",
-       "      <td>5.866545</td>\n",
-       "      <td>5.053221</td>\n",
+       "      <td>TICK022 BB</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>-1.938274</td>\n",
+       "      <td>-0.096296</td>\n",
+       "      <td>-0.488395</td>\n",
+       "      <td>-0.114678</td>\n",
+       "      <td>2026-05-24</td>\n",
+       "      <td>2.867997</td>\n",
+       "      <td>4.968971</td>\n",
        "      <td>2025-01-30</td>\n",
-       "      <td>0.813324</td>\n",
+       "      <td>-2.100974</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2025-01-31</td>\n",
-       "      <td>TICK007 BBB</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>-0.279497</td>\n",
-       "      <td>0.178586</td>\n",
-       "      <td>1.218134</td>\n",
-       "      <td>-0.756868</td>\n",
-       "      <td>2034-07-01</td>\n",
-       "      <td>4.966024</td>\n",
-       "      <td>5.053221</td>\n",
+       "      <td>TICK044 BB</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>0.308720</td>\n",
+       "      <td>1.293961</td>\n",
+       "      <td>-1.430654</td>\n",
+       "      <td>0.436478</td>\n",
+       "      <td>2025-10-22</td>\n",
+       "      <td>6.451625</td>\n",
+       "      <td>4.968971</td>\n",
        "      <td>2025-01-30</td>\n",
-       "      <td>-0.087198</td>\n",
+       "      <td>1.482654</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2025-01-31</td>\n",
-       "      <td>TICK042 BBB</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>-0.231019</td>\n",
-       "      <td>1.940160</td>\n",
-       "      <td>1.277303</td>\n",
-       "      <td>0.231858</td>\n",
-       "      <td>2032-11-09</td>\n",
-       "      <td>9.224095</td>\n",
-       "      <td>5.053221</td>\n",
+       "      <td>TICK005 BB</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>-0.522593</td>\n",
+       "      <td>0.093999</td>\n",
+       "      <td>-0.874177</td>\n",
+       "      <td>1.252807</td>\n",
+       "      <td>2028-05-21</td>\n",
+       "      <td>4.807759</td>\n",
+       "      <td>4.968971</td>\n",
        "      <td>2025-01-30</td>\n",
-       "      <td>4.170874</td>\n",
+       "      <td>-0.161211</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -370,21 +370,21 @@
       ],
       "text/plain": [
        "        date       ticker rating  feature_A  feature_B  feature_C  feature_D  \\\n",
-       "0 2025-01-31  TICK008 BBB    BBB  -0.512888  -0.311519  -0.025630   1.382923   \n",
-       "1 2025-01-31  TICK043 BBB    BBB   0.293230   0.751977  -0.299135   0.071018   \n",
-       "2 2025-01-31  TICK017 BBB    BBB   0.063136   0.369896  -0.926765   0.041201   \n",
-       "3 2025-01-31  TICK007 BBB    BBB  -0.279497   0.178586   1.218134  -0.756868   \n",
-       "4 2025-01-31  TICK042 BBB    BBB  -0.231019   1.940160   1.277303   0.231858   \n",
+       "0 2025-01-31  TICK024 BBB    BBB   0.083753   0.511852   0.470484  -0.407524   \n",
+       "1 2025-01-31  TICK048 BBB    BBB  -1.020937   0.012302  -0.551115  -1.993220   \n",
+       "2 2025-01-31   TICK022 BB     BB  -1.938274  -0.096296  -0.488395  -0.114678   \n",
+       "3 2025-01-31   TICK044 BB     BB   0.308720   1.293961  -1.430654   0.436478   \n",
+       "4 2025-01-31   TICK005 BB     BB  -0.522593   0.093999  -0.874177   1.252807   \n",
        "\n",
        "      expiry     yield  loggerPred loggerRunDate  loggerResid  \n",
-       "0 2025-05-29  3.804156    5.053221    2025-01-30    -1.249065  \n",
-       "1 2028-07-16  5.616794    5.053221    2025-01-30     0.563573  \n",
-       "2 2029-02-11  5.866545    5.053221    2025-01-30     0.813324  \n",
-       "3 2034-07-01  4.966024    5.053221    2025-01-30    -0.087198  \n",
-       "4 2032-11-09  9.224095    5.053221    2025-01-30     4.170874  "
+       "0 2026-05-10  6.078283    5.138238    2025-01-30     0.940045  \n",
+       "1 2032-10-26  4.210123    5.138238    2025-01-30    -0.928116  \n",
+       "2 2026-05-24  2.867997    4.968971    2025-01-30    -2.100974  \n",
+       "3 2025-10-22  6.451625    4.968971    2025-01-30     1.482654  \n",
+       "4 2028-05-21  4.807759    4.968971    2025-01-30    -0.161211  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
