--- a/docs/utils/testing.ipynb
+++ b/docs/utils/testing.ipynb
@@ -781,7 +781,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -795,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
